<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021 Sergio Belda Galbis
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <FrameLayout
        android:id="@+id/edit_project"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_row_height_small"
        android:background="?attr/selectableItemBackground">

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="72dp"
            android:text="@string/edit_project"
            android:textColor="?attr/colorOnSurface" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/delete_project"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_row_height_small"
        android:background="?attr/selectableItemBackground">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/delete_project_text"
            style="?attr/textAppearanceCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="72dp"
            android:text="@string/delete_project"
            android:textColor="@color/enable_item_text" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:id="@+id/theme_option"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_row_height"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/theme_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_baseline_default_theme_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="?attr/textAppearanceCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/theme_description"
                style="?attr/textAppearanceCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_on_surface_emphasis_medium" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_source_licenses_button"
            style="@style/AndroidToDometer.Button.TextButton.Mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_source_licenses" />

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="·"
            android:textColor="@color/material_on_surface_emphasis_medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/about_button"
            style="@style/AndroidToDometer.Button.TextButton.Mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />
    </LinearLayout>
</LinearLayout>